# simLandIceMeshGen

./: BSpline.cc  BSpline.h  BSpline2d.cc  BSplineKokkos.cpp  BSplineKokkos.h  BSplineKokkos2D.cpp  BSplineKokkos2D.h  CMakeLists.txt  Expression.cc  Expression.h  PolyNomial.cc  PolyNomial.h  README.md  build_and_test.sh  cubicSplineFitting.py  curveReader.cc  curveReader.h  generate2dModel.cc  generate2dModelFromMesh.cc  geomReaders.cc  kokkosCoordStruct.cc  landIceMeshGen.cc  landIceMeshGen.h  modelGen.cc  modelGen2d.cc  modelGen2d.h  mshToVtk.cpp  netcdfWriter.cc  netcdfWriter.h  oneSquare.msh  simModelGen2d.cc  simModelGen2d.h  splineInterpolation.cc  splineInterpolation.h  testCreateEdges.cc  testCurveCreation.cc  testDiscoverTopo.cc  testKokkos1stDerivative.cpp  testKokkos2D1stDeriv.cpp  testKokkos2D2ndDeriv.cpp  (+7 more)
Quadtree/: README.md
cmake/: FindSimModSuite.cmake
contour_test_data/: L_11pts.csv  ais.vtk  fjord.csv  gis.msh  gisCurve1.csv  gisCurve3.csv  gis_domain_boundary.vtk  gis_noBbox.vtk  oneSquare.vtk  oval_wBbox.vtk  testCurve1293.csv  testCurve1655.csv  testCurve2pts.csv  testCurve4277.csv  testCurveSineSegment.csv  testCurveSplineFitting.csv  testCurveStraightLine.csv  testDoubleMdlVtx.csv  testEdge522.csv  testIntersectionEdge2339Edge2344.csv  twoSquares.vtk
